# hdg_bavaria_homeassistant

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  release-drafter.yml  release.yml  semantic_release.yml  validate.yml
custom_components/hdg_boiler/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  definitions.py  diagnostics.py  entity.py  enums.py  exceptions.py  manifest.json  models.py  number.py  polling_groups.py  polling_manager.py  registry.py  select.py  sensor.py  services.py  utils.py
custom_components/hdg_boiler/classes/: __init__.py  polling_response_processor.py  set_value_worker.py
custom_components/hdg_boiler/helpers/: api_access_manager.py  entity_utils.py  enum_mappings.py  logging_utils.py  network_utils.py  parsers.py  parsing_utils.py  sensor_parsing_utils.py  string_utils.py  validation_utils.py
custom_components/hdg_boiler/translations/: de.json  en.json
scripts/: build_hacs_zip.sh  publish.sh
